--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "firebase": "^9.0.2",
+    "firebase-admin": "^9.11.1",
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-firebase-hooks": "^3.0.4"
   },
   "devDependencies": {
     "eslint": "7.32.0",
